# mybenchmarking

./: .gitignore  CONTRIBUTING.md  README.md  prompt.log.md  pyproject.toml
.github/: CONSTITUTION.md
.specify/: PLAN.md  SPEC.md  research.md  tasks.md
docs/: README.md  installation-guide.md
docs/cpu/: stress-ng.md  sysbench.md
docs/disk/: bonnie++.md  dd.md  fio.md
docs/memory/: mbw.md  sysbench-memory.md
docs/metrics/: bandwidth.md  iops.md  latency.md  throughput.md
docs/network/: iperf3.md  netperf.md
results/: README.md
src/mybench/: __init__.py  __main__.py
src/mybench/analysis/: compare.py
src/mybench/cli/: __init__.py  compare.py  list.py  main.py  save.py  show.py  system.py
src/mybench/models/: __init__.py  config.py  result.py  system.py
src/mybench/storage/: __init__.py  base.py  profiles.py  results.py
src/mybench/utils/: detect.py  format.py
systems/: README.md
tests/: conftest.py  test_analysis.py  test_models.py  test_storage.py
